bowtie/test/invalid-syntax-examples/duplicate-type-definitions.bowtie
duplicate-type-definitions.bowtie:4:1:
  |
4 | <empty line>
  | ^
Duplicate type definitions found in module with name A
